# wax-orng

./: .gitignore  .prettierrc  .travis.yml  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE  Makefile  README.md  jest.config.js  package-lock.json  package.json
CMakeModules/: WaxHelpers.cmake
include/: contract_info.hpp.in  orng.hpp
scripts/: get_contract_name.sh  get_version.sh  table_serialization_parser.py
src/: contract_info.hpp.in  orng.cpp  wax_contract.cpp
tests/: CMakeLists.txt  rsaSigning.js  waxorng.test.js
tests/contracts/: randreceiver.abi  randreceiver.cpp  randreceiver.wasm
tests/resources/: test_rsa_4096_priv_0.pem  test_rsa_4096_priv_1.pem  test_rsa_4096_priv_2.pem  test_rsa_4096_priv_3.pem
tests/src/: acceptbwpay_tests.cpp  autoindex_tests.cpp  common.hpp  contract_helpers.hpp.in  killjobs_tests.cpp  main.cpp  pause_tests.cpp  requestrand_tests.cpp  rsa_signer.hpp  setbwpayer_tests.cpp  setrand_tests.cpp  setsigpubkey_tests.cpp  version_tests.cpp  wax_fixture.hpp
